WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301037
[IFC] Range based line builder does not support partial layout
https://bugs.webkit.org/show_bug.cgi?id=301037
Summary
[IFC] Range based line builder does not support partial layout
alan
Reported
2025-10-18 10:14:19 PDT
<
rdar://160098965
>
Attachments
Patch
(6.06 KB, patch)
2025-10-18 10:25 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(7.04 KB, patch)
2025-10-18 16:42 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(6.04 KB, patch)
2025-10-18 16:46 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-10-18 10:25:59 PDT
Created
attachment 477125
[details]
Patch
alan
Comment 2
2025-10-18 16:42:06 PDT
Created
attachment 477126
[details]
Patch
alan
Comment 3
2025-10-18 16:46:07 PDT
Created
attachment 477127
[details]
[fast-cq]Patch
EWS
Comment 4
2025-10-20 06:53:34 PDT
Committed
301805@main
(d4e315fddffa): <
https://commits.webkit.org/301805@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477127
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug