[IFC] Range based line builder does not support partial layout https://bugs.webkit.org/show_bug.cgi?id=301037 <rdar://160098965>

Reviewed by Antti Koivisto.

Disable range based line builder for partial layout (it is designed to run layout
on a full set of text content nested inside inline boxes).

Test: fast/text/fragmented-text-with-inline-box-crash.html

* LayoutTests/fast/text/fragmented-text-with-inline-box-crash-expected.txt: Added.
* LayoutTests/fast/text/fragmented-text-with-inline-box-crash.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::layout):
* Source/WebCore/layout/formattingContexts/inline/RangeBasedLineBuilder.cpp:
(WebCore::Layout::RangeBasedLineBuilder::isEligibleForRangeInlineLayout):
* Source/WebCore/layout/formattingContexts/inline/RangeBasedLineBuilder.h:

Canonical link: https://commits.webkit.org/301805@main